force-app/main/default/objects/I_ST_BatchScoring__c/I_ST_BatchScoring__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>I_ST_BatchScoring</label>
</CustomObject>