force-app/main/default/objects/I_ST_BatchScoring__c/fields/I_ST_BatchSize__c.field-meta.xml
<CustomField>
    <fullName>I_ST_BatchSize__c</fullName>
    <description>This is the batch size to control the Lead/Activity scoring jobs for IST</description>
    <label>I_ST_BatchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>