force-app/main/default/objects/I_ST_BatchScoring__c/fields/I_ST_Last_N_Hour__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Last_N_Hour__c</fullName>
    <description>Used for Activity Scoring batch to run batch and pick records modified &apos;N&apos; hours before current time</description>
    <label>I_ST_Last_N_Hour</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>