force-app/main/default/objects/I_ST_BatchScoring__c/fields/I_ST_RecordType_SFIDs__c.field-meta.xml
<CustomField>
    <fullName>I_ST_RecordType_SFIDs__c</fullName>
    <description>Provide comma separated RecordTypeIds of Case object which is to be considered for Activity Scoring. To get the record type Ids =&gt; Navigate to Setup -&gt; Object Manager -&gt; Case -&gt; RecordTypes -&gt; Select the record type -&gt; copy the 18 digit Id from the URL</description>
    <label>I_ST_RecordType_SFIDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>