force-app/main/default/objects/I_ST_BatchScoring__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>I_ST_BatchSize__c</columns>
    <columns>I_ST_RecordType_SFIDs__c</columns>
    <columns>I_ST_CronExpression__c</columns>
    <columns>I_ST_Last_N_Hour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>